--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/app/generated/prisma
+/app/prisma/generated
+/app/prisma/migrations
 .env*.local
+
