--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/adapter-ppg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "next": "16.0.7",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
@@ -24,7 +26,8 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
