--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@mui/material": "^7.3.6",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/adapter-ppg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "next": "16.0.10",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.1.13"
   },
