--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/adapter-ppg": "^7.1.0",
